# Agent_City

./: .gitignore  AGENTS.md  README.md  package.json  start-agent-city.bat  start-agent-city.ps1
.agents/plugins/: marketplace.json
backend/app/: dependencies.py  main.py
desktop/: README.md  main.js  package-lock.json  package.json  preload.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: app-workbench-design.md  architecture.md  frontend-debug-playbook.md  frontend-e2e-test-report.md  frontend-fix-report-template.md  frontend-fix-report.md  full-system-test-report.md  parser-capability-summary.md  parser-fix-report-template.md  parser-fix-report.md  parser-intelligence-upgrade-report.md  parser-regression-summary.md  parser-test-plan.md  parser-test-results.md  parser-tested-keep.txt  product-ux.md  reference-evaluation-template.md  reference-notes.md  ui-product-improvement-report.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  playwright.app.config.ts  playwright.config.ts  tailwind.config.ts
samples/: codex.metrics.sample.json  codex.traces.sample.json  flow_events.sample.json  mock.flow.sample.json  mock.metrics.sample.json  topology.sample.json  trace_detail.sample.json
scripts/: cleanup_refs.py  collect-console-errors.ps1  collect-console-errors.sh  dev-app.ps1  dev-app.sh  dev-frontend.ps1  dev-frontend.sh  playwright-smoke.ps1  playwright-smoke.sh  run_full_system_tests.py  run_parser_regression.py  run_parser_retest.py  start-app.js
(+160 files in other folders)
